deployment/production/deployment.yml
# kubetpl:syntax:$
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: integral-systems
    component: frontend
    created-by: gradlon
    instance: integral-systems-frontend-production
    managed-by: gradlon
    part-of: integral-systems-website
    port: "3000"
    role: frontend
    traefik: enabled
    type: node
    version: $TAG
  name: integral-systems
  namespace: integral-systems
spec:
  progressDeadlineSeconds: 900
  replicas: 1
  selector:
    matchLabels:
      app: integral-systems
  template:
    metadata:
      labels:
        app: integral-systems
        component: frontend
        created-by: gradlon
        instance: integral-systems-frontend-production
        managed-by: gradlon
        part-of: integral-systems-website
        port: "3000"
        role: frontend
        traefik: enabled
        type: node
        version: $TAG
    spec:
      containers:
      - command:
        - node
        - index.js
        image: registry.integral-systems.ch/integral-systems/integral-systems-frontend:$TAG
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 60
        name: integral-systems-website-fronted
        ports:
        - containerPort: 3000
        readinessProbe:
          failureThreshold: 60
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          limits:
            cpu: 512m
            memory: 1280Mi
          requests:
            cpu: 50m
            memory: 50Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          procMount: Default
          readOnlyRootFilesystem: false
          runAsNonRoot: true
      imagePullSecrets:
      - name: fx-docker-registry
      nodeSelector:
        class: core
      restartPolicy: Always
      securityContext:
        fsGroup: 777
        runAsGroup: 777
        runAsUser: 9988
---
apiVersion: v1
kind: Service
metadata:
  name: integral-systems-service
  namespace: integral-systems
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: integral-systems
