deployment/production/ingressroute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-integral-systems-website-frontend-tls
  namespace: integral-systems
spec:
  entryPoints:
  - web-secure
  routes:
  - kind: Rule
    match: Host(`integral-systems.ch`)  || (Host(`www.integral-systems.ch`)) || (Host(`integral-design.ch`))
      || (Host(`www.integral-design.ch`))
    middlewares:
    - name: integral-systems-website-frontend-compress
    - name: integral-systems-website-frontend-redirectregex
    priority: 1
    services:
    - name: integral-systems-website-frontend-service
      port: 3000
  tls:
    secretName: integral-systems-website-frontend-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-integral-systems-website-frontend
  namespace: integral-systems
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`integral-systems.ch`) || (Host(`www.integral-systems.ch`) || (Host(`integral-design.ch`)
      || (Host(`www.integral-design.ch`))
    middlewares:
    - name: integral-systems-website-frontend-compress
    - name: integral-systems-website-frontend-redirect
    - name: integral-systems-website-frontend-redirectregex
    priority: 1
    services:
    - name: integral-systems-website-frontend-service
      port: 3000
